[package]
name = "amplihack-cli"
description = "CLI command parsing, launcher, and process management for amplihack"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
amplihack-hive = { path = "../amplihack-hive" }
amplihack-types = { workspace = true }
amplihack-state = { workspace = true }
amplihack-utils = { workspace = true }
amplihack-memory = { workspace = true }
amplihack-reflection = { workspace = true }
amplihack-builders = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
dialoguer = "0.11"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
flate2 = "1"
libc = { workspace = true }
semver = "1"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
signal-hook = { workspace = true }
time = { version = "0.3", default-features = false, features = ["std"] }
tar = "0.4"
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
toml = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }
regex = "1"
ureq = { version = "2", features = ["json"] }
lbug = "0.15.3"
rusqlite = { version = "0.38.0", features = ["bundled"] }
prost = "0.13"
lru = { workspace = true }
fs4 = { version = "0.13", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2"
tempfile = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
# SEC-WS4-02: Explicit reference forces the Cargo resolver to apply the
# workspace exact pin (=1.0.138) across the full dependency graph, including
# lbug's transitive pull of cxx-build. build.rs must remain a no-op stub.
cxx-build = { workspace = true }

[[test]]
name = "lbug_ffi"
path = "../../tests/integration/lbug_ffi_test.rs"

[[test]]
name = "cargo_cxx_pin_test"
path = "tests/cargo_cxx_pin_test.rs"
