[package]
name = "amplihack-cli"
description = "CLI command parsing, launcher, and process management for amplihack"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[features]
# Default OFF: the Signal onboarding subcommand is always registered in clap,
# but its implementation compiles only under this feature. Built without it,
# `amplihack signal ...` returns a clean UNSUPPORTED error (exit 3). See #921.
#
# NOTE: render.rs additionally pulls in the external `qrcode` crate for
# half-block rendering of the sgnl:// device-link URI; that optional dependency
# (`qrcode = { version = "0.14", optional = true }`) and `dep:qrcode` are added
# to this feature list when render.rs is implemented, together with the
# accompanying Cargo.lock update.
default = []
signal = ["dep:amplihack-signal", "dep:qrcode"]

[dependencies]
amplihack-hive = { path = "../amplihack-hive" }
amplihack-launcher = { workspace = true }
amplihack-types = { workspace = true }
amplihack-state = { workspace = true }
amplihack-utils = { workspace = true }
amplihack-workflows = { workspace = true }
amplihack-memory = { workspace = true }
amplihack-reflection = { workspace = true }
amplihack-builders = { workspace = true }
amplihack-remote = { path = "../amplihack-remote" }
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
dialoguer = "0.11"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
flate2 = "1"
libc = { workspace = true }
semver = "1"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
signal-hook = { workspace = true }
time = { version = "0.3", default-features = false, features = ["std"] }
tar = "0.4"
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "time"] }
tracing = { workspace = true }
sha2 = { workspace = true }
toml = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }
regex = "1"
ureq = { version = "2", features = ["json"] }
lbug = "0.15.3"
rusqlite = { version = "0.38.0", features = ["bundled"] }
prost = "0.13"
lru = { workspace = true }
fs4 = { version = "0.13", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
# Issue #921: Signal onboarding. Both are OPTIONAL and pulled in only by the
# `signal` feature (see [features]); a default build links neither.
# amplihack-signal reuses the EXISTING config schema so onboarding output is
# byte-compatible with the per-session channel. qrcode renders the device-link
# URI as a terminal QR (default-features off to avoid the image/svg stack).
amplihack-signal = { path = "../amplihack-signal", features = ["signal"], optional = true }
qrcode = { version = "0.14", default-features = false, optional = true }

[dev-dependencies]
assert_cmd = "2"
tempfile = { workspace = true }
anyhow = { workspace = true }
# Issue #921: the config_writer TDD test round-trips generated TOML through the
# REAL amplihack-signal resolver to prove the onboarding output is consumable by
# the existing per-session channel without divergence.
amplihack-signal = { path = "../amplihack-signal", features = ["signal"] }
# Issue #625: PTY-driven integration test for the interactive update prompt.
# Linux-only at use site (gated `#[cfg(target_os = "linux")]`); listing here
# unconditionally is fine because rexpect itself compiles on macOS too — we
# only gate the test that drives a pseudo-TTY.
rexpect = "0.6"

[build-dependencies]
# SEC-WS4-02: Explicit reference forces the Cargo resolver to apply the
# workspace exact pin (=1.0.138) across the full dependency graph, including
# lbug's transitive pull of cxx-build. build.rs must remain a no-op stub.
cxx-build = { workspace = true }

[[test]]
name = "lbug_ffi"
path = "../../tests/integration/lbug_ffi_test.rs"

[[test]]
name = "cargo_cxx_pin_test"
path = "tests/cargo_cxx_pin_test.rs"
