[package]
name = "amplihack-delegation"
description = "Meta-delegation orchestration for amplihack"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = "1"
tracing = { workspace = true }
walkdir = "2"
globset = "0.4"
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
