[package]
name = "amplihack-domain-agents"
description = "Specialized agent types: teaching, security, code synthesis, learning"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
amplihack-agent-core = { path = "../amplihack-agent-core" }
amplihack-memory = { workspace = true }
amplihack-workflows = { path = "../amplihack-workflows" }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
