[package]
name = "amplihack-fleet"
version.workspace = true
edition.workspace = true
description = "Remote fleet infrastructure for distributed agent orchestration"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
