[package]
name = "amplihack-hooks"
description = "Hook implementations for amplihack (pre_tool_use, stop, session_start, etc.)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
amplihack-types = { workspace = true }
amplihack-state = { workspace = true }
amplihack-cli = { workspace = true }
amplihack-security = { workspace = true }
amplihack-workflows = { workspace = true }
amplihack-utils = { workspace = true }
amplihack-signal = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
shell-words = { workspace = true }
regex = "1"
sha2 = { workspace = true }

[features]
default = []
# Enables the per-session Signal channel wiring (SessionStart create+announce+
# spawn subscriber, inbox drain into additionalContext, Stop quit+kill).
signal = ["dep:amplihack-signal", "amplihack-signal/signal"]

[dev-dependencies]
tempfile = { workspace = true }

[[test]]
name = "golden"
path = "../../tests/golden/run_golden.rs"
