[package]
name = "amplihack-hooks"
description = "Hook implementations for amplihack (pre_tool_use, stop, session_start, etc.)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
amplihack-types = { workspace = true }
amplihack-state = { workspace = true }
amplihack-cli = { workspace = true }
amplihack-security = { workspace = true }
amplihack-workflows = { workspace = true }
amplihack-utils = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
shell-words = { workspace = true }
regex = "1"
sha2 = { workspace = true }
amplihack-signal = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = [
    "rt",
    "net",
    "io-util",
    "time",
    "macros",
] }
libc = { version = "0.2", optional = true }

[features]
# Off by default: pulls in the Signal channel crate (and its tokio-net stack)
# only when explicitly enabled. With the feature off there is zero cost.
default = []
signal = ["dep:amplihack-signal", "amplihack-signal/signal", "dep:tokio", "dep:libc"]

[dev-dependencies]
tempfile = { workspace = true }

[[test]]
name = "golden"
path = "../../tests/golden/run_golden.rs"
