[package]
name = "amplihack-launcher"
version.workspace = true
edition.workspace = true
description = "Extended launcher support for all agent types (Codex, Amplifier, Copilot)"

[dependencies]
amplihack-types = { workspace = true }
amplihack-utils = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
libc = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
