[package]
name = "amplihack-memory"
version.workspace = true
edition.workspace = true
description = "Five-type cognitive memory system with distributed sharding"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
regex = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { workspace = true }
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
rusqlite = { version = "0.38.0", features = ["bundled"], optional = true }
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }

[dev-dependencies]
tempfile = "3"
proptest = "1"

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]
pyo3-bindings = ["dep:pyo3"]

[lib]
crate-type = ["lib"]
