[package]
name = "amplihack-multilspy"
version.workspace = true
edition.workspace = true
description = "Language-agnostic LSP client wrapping multiple language servers"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["process", "io-util", "sync", "rt", "macros", "time", "fs"] }

[dev-dependencies]
tempfile.workspace = true
