[package]
name = "amplihack-orchestration"
version.workspace = true
edition.workspace = true
description = "Claude subprocess execution and high-level orchestration patterns"
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "process", "time", "sync", "io-util"] }
tracing = { workspace = true }
once_cell = "1"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time", "sync", "test-util"] }
