[package]
name = "amplihack-safety"
version.workspace = true
edition.workspace = true
description = "Git conflict detection and safe copy strategies for auto mode"
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"

[dev-dependencies]
