[package]
name = "amplihack-security"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "XPIA (eXtendible Prompt Injection Armor) security module for amplihack"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = "1"
once_cell = "1"

[dev-dependencies]
tempfile = { workspace = true }
